# E-wallet

./: .gitignore  README.md  Setup.py  app.service  config.py  configure_nginx.sh  e-wallet-worker.service  e-wallet.conf.template  e-wallet.service  env.txt  hooks.py  install_hooks.py  manage.py  pyproject.toml  requirements.txt  settings.py  setup.sh  sms_template.json  ussid_response.json
.github/workflows/: deploy.yaml
app/: __init__.py  afri_config.py  decorators.py  job_callbacks.py  message.py  models.py  models_events.py  mpesa.py
app/payments/: __init__.py  views.py
app/ussid/: __init__.py  views.py
hooks/: pre-commit.py  pre-push.py
migrations/versions/: 0a5610e5dbe8_.py  219755035d55_.py  6ec417b9797a_.py
setup/: __init__.py  configure_nginx.py  configure_service.py  install_updates.py  launch_redis_worker.py  migrate_database.py
tests/: __init__.py  b2c-response.json  settings.py  stk-response.json  task_setup.py  test_account.py  test_app_config.py  test_app_ussid.py  test_job_callbacks.py  test_mpesa.py  test_payment.py  test_send_sms.py  test_sms_templates.py  test_task.py  test_transactions.py  test_user_account.py
