[tool.poetry]
name = "e-wallet"
version = "0.1.0"
description = "Simple Ussid wallet"
authors = ["Gibson-Gichuru <gichuru.developer@gmail.com>"]
readme = "README.md"
packages = [{include = "e_wallet"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
africastalking = "^1.2.5"
flask-migrate = "^4.0.4"
flask-sqlalchemy = "^3.0.3"
redis = "^4.5.1"
rq = "^1.13.0"
gunicorn = "^20.1.0"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pyngrok = "^5.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
